# MegEngine

./: .gitignore  CMakeLists.txt  build_and_run.sh  xornet_deploy.mge
scripts/cmake-build/: host_build.sh
sdk/xor-deploy/: CMakeLists.txt
src/core/impl/: exception.cpp
